# Dirtybird-CUDA-Miner

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD-PARTY-LICENSES.md  build.sh  run-gpu-miner.bat
.github/workflows/: ci.yml  release.yml
hiveos/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  mmp-stats.sh
src/: main.cpp
src/crypto/: astrobwt.h  hash_utils.h  rc4.h  sais.h  salsa20.h  sha256.h
src/gpu/: astrobwt_gpu.cu  astrobwt_gpu.cuh  stageb_perhash_coop.cuh  stageb_perhash_msort.cuh  stageb_refine.cuh
